@@ -20,6 +20,7 @@ Jython 2.5.2a1
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
     - Fix pickling of collections.defaultdict objects
+    - Fix the cmath module to accept objects implementing the __float__ method
 
 Jython 2.5.1rc3
   Bugs Fixed
